remove rig controller

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.render-pipelines.universal": "14.0.9",
     "jp.keijiro.beta": "1.0.2",
     "jp.keijiro.klak.math": "2.1.0",
+    "jp.keijiro.klak.motion": "1.1.0",
     "com.unity.modules.animation": "1.0.0"
   }
 }
