--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "jp.keijiro.beta": "1.0.2",
     "jp.keijiro.klak.math": "2.1.0",
     "jp.keijiro.klak.motion": "1.1.0",
+    "jp.keijiro.test-assets": "1.0.1",
     "jp.keijiro.vfxgraphassets": "1.2.0",
     "com.unity.modules.animation": "1.0.0"
   }
